syntax = "proto3";
package sedachain.wasm_storage.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/sedaprotocol/seda-chain/x/wasm-storage/types";

message Wasm {
  bytes hash = 1;
  bytes bytecode = 2;
  WasmType wasmType = 3;
  google.protobuf.Timestamp added_at = 4
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
}

enum WasmType {
  option (gogoproto.goproto_enum_prefix) = false;

  WASM_TYPE_UNSPECIFIED = 0
      [ (gogoproto.enumvalue_customname) = "WasmTypeNil" ];
  WASM_TYPE_DATA_REQUEST = 1
      [ (gogoproto.enumvalue_customname) = "WasmTypeDataRequest" ];
  WASM_TYPE_TALLY = 2 [ (gogoproto.enumvalue_customname) = "WasmTypeTally" ];
  WASM_TYPE_DATA_REQUEST_EXECUTOR = 3
      [ (gogoproto.enumvalue_customname) = "WasmTypeDataRequestExecutor" ];
  WASM_TYPE_RELAYER = 4
      [ (gogoproto.enumvalue_customname) = "WasmTypeRelayer" ];
}

message Params { uint64 max_wasm_size = 1; }
